--- a/src/style/Style.css
+++ b/src/style/Style.css
@@ -1,3 +1,73 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
+html, body,
+h1, p {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: .875rem;
+  letter-spacing: 1.2px;
+  color: #293264;
+  background-color: #F5F7FB;
+}
+
+@media (min-width: 700px) {
+  body {
+    font-size: 1rem;
+  }
+}
+
+.button-base-style {
+  font-family: inherit;
+  font-weight: inherit;
+  letter-spacing: inherit;
+  color: #F5F7FB;
+  background-color: #4D5B9E;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
+  transition: .5s ease-out;
+  padding: 1em 3.5em;
+}
+
+.button-base-style:hover,
+.button-base-style:focus {
+  outline: none;
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.button-base-style:active  {
+  outline: none;
+  box-shadow: inset 3px 3px 5px rgba(0, 0, 0, .4);
+}
+
+/* Start page */
+
+.start-quiz-container {
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.start-quiz-header {
+  font-size: 2.5em;
+  margin-bottom: .5em;
+}
+
+/* Quiz page */
 .quiz-container {
     min-height: 100vh;
     padding: 1em;
@@ -26,20 +96,17 @@
     margin-bottom: .6em;
   }
   
-  @media (min-width: 1024px) {
-    .question-text {
-      margin-bottom: 1.2em;
-    }
-  }
-  
   .answers-container {
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 1fr;
     gap: 1em;
   }
-  
+
   @media (min-width: 1024px) {
+    .question-text {
+      margin-bottom: 1.2em;
+    }
     .answers-container {
       grid-template-columns: repeat(4, 1fr);
     }
@@ -73,7 +140,7 @@
   
   .unselected-answer:hover { 
     cursor: pointer;
-    animation: unselectedAnswerHover 1s linear;
+    animation: unselectedAnswerHover 0.5s linear;
     animation-fill-mode: forwards;
   }
   
@@ -104,4 +171,11 @@
   
   .quiz-result-container {
     text-align: center;
+  }
+
+  .loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
   }
